package LessonEight.MVI.model;

/**
 * Интерфейс Intent представляет намерение или действие, которое должно быть выполнено.
 * В данном контексте это маркерный интерфейс, используемый для группировки различных намерений.
 * Это маркерный интерфейс т.е. пустой интерфейс. Он не содержит методов. Используется для помечения
 * С помощью этого мы можем групировать различные методы. Подставляя различные условия они хорошо бы интегрировались
 */
public interface Intent {
}
